# duckhog

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  Makefile  README.md  claim.sh  extension_config.cmake  justfile  requirements-dev.txt  vcpkg-configuration.json  vcpkg.json
.cache/clangd/index/: arrow_stream.cpp.D7EE52774EB0C06A.idx  arrow_stream.hpp.00C60A1131689CE7.idx  arrow_value.cpp.0B7415226314FAFB.idx  arrow_value.hpp.B3D7E79260911FFC.idx  connection_string.cpp.EC54440F72CC1B3B.idx  connection_string.hpp.746C7B5551ECEC57.idx  duckhog_extension.cpp.520CD31B7B1CF974.idx  duckhog_extension.hpp.440BCE54792363B6.idx  flight_client.cpp.A8D0763B91FDB492.idx  flight_client.hpp.DC34B42CA5581EC1.idx  posthog_catalog.cpp.12D550C28416C053.idx  posthog_catalog.hpp.1C0F3B8D47BF02E0.idx  posthog_delete.cpp.120345B43FB48AC2.idx  posthog_delete.hpp.00B0AFA89CA4F1A8.idx  posthog_dml_rewriter.cpp.DCF9571CDACEE223.idx  posthog_dml_rewriter.hpp.9D9BD16B54AF7F37.idx  posthog_insert.cpp.0E458FA9EEC9E2EC.idx  posthog_insert.hpp.3A9507903560AFE2.idx  posthog_logger.hpp.95C6BB4D2592874C.idx  posthog_schema_entry.cpp.ADD51A603D0FC066.idx  posthog_schema_entry.hpp.96E9208E547E8CE7.idx  posthog_storage.cpp.424C1E56F96FD59B.idx  posthog_storage.hpp.17E833D205B3A5B0.idx  posthog_stub_catalog.cpp.AAED219135E00928.idx  posthog_stub_catalog.hpp.7AB54570AEA211F2.idx  posthog_table_entry.cpp.242FFE266A52F012.idx  posthog_table_entry.hpp.B9FE92545A501BD4.idx  posthog_transaction.hpp.BD6E0495544255C9.idx  posthog_transaction_manager.cpp.51B0061458D0C22C.idx  posthog_transaction_manager.hpp.EC519A6B462FD64E.idx  posthog_update.cpp.FBDC3107B4031F64.idx  posthog_update.hpp.815B106C01D55441.idx  remote_scan.cpp.D02FB1FCCA688E46.idx  remote_scan.hpp.333431A4A7E97280.idx
.claude/: settings.local.json
.github/scripts/: modify_distribution_matrix_with_depot_runners.py
.github/workflows/: MainDistributionPipeline.yml  duckdb-next-canary.yml  linux-arm64-debug.yml  rerun.yml
docs/: DEVELOPMENT.md  DUCKLAKE_BUGS.md  INTERNAL_API.md  QUICKSTART.md  README.md  RELATED_BUGS.md  UPDATING.md  VCPKG_WRITABLE_CACHE_SETUP.md  arrow-conversion-implementation-plan.md  arrow-conversion-refactor.md  codex_cloud_ci_tidy_run.md
docs/plans/: rm02_remote_update_plan.md
scripts/: example-usage.sql  flight-server.sh  start-flight-server.sh  test-servers.sh
skills/bug-verification/: SKILL.md
skills/bug-verification/references/: provenance-tree.md
skills/issue-gate/: SKILL.md
skills/issue-gate/references/: claude-usage.md  match-rubric.md
skills/red-team/: SKILL.md
skills/red-team/references/: payloads.md  surface-map.md
src/: duckhog_extension.cpp  posthog_extension.cpp
src/catalog/: posthog_catalog.cpp  posthog_catalog.hpp  posthog_schema_entry.cpp  posthog_schema_entry.hpp  posthog_stub_catalog.cpp  posthog_stub_catalog.hpp  posthog_table_entry.cpp  posthog_table_entry.hpp  remote_scan.cpp  remote_scan.hpp  remote_table_function.cpp  remote_table_function.hpp
src/execution/: posthog_create_table_as.cpp  posthog_create_table_as.hpp  posthog_delete.cpp  posthog_delete.hpp  posthog_dml_rewriter.cpp  posthog_dml_rewriter.hpp  posthog_insert.cpp  posthog_insert.hpp  posthog_merge.cpp  posthog_merge.hpp  posthog_sql_utils.cpp  posthog_sql_utils.hpp  posthog_update.cpp  posthog_update.hpp
src/flight/: arrow_conversion.cpp  arrow_conversion.hpp  arrow_stream.cpp  arrow_stream.hpp  flight_client.cpp  flight_client.hpp  session_token_utils.cpp  session_token_utils.hpp
src/http/: control_plane_client.cpp  control_plane_client.hpp
src/include/: duckhog_extension.hpp  posthog_extension.hpp
src/storage/: posthog_storage.cpp  posthog_storage.hpp  posthog_transaction.hpp  posthog_transaction_manager.cpp  posthog_transaction_manager.hpp
src/utils/: arrow_value.cpp  arrow_value.hpp  connection_string.cpp  connection_string.hpp  posthog_logger.hpp
test/: README.md  run_full_suite.sh  run_sql_roadmap.sh  sql_roadmap.md
test/configs/: flight.json
test/cpp/: test_create_view_rewriter.cpp  test_ctas_rewriter.cpp  test_delete_rewriter.cpp  test_dml_rewriter.cpp  test_insert_sql_builder.cpp  test_merge_rewriter.cpp  test_partition_alter.cpp  test_rename_table.cpp  test_render_at_clause.cpp  test_update_rewriter.cpp
test/integration/: README.md  control_plane_server.py  flight_server.py  requirements.txt  run_integration_tests.sh
test/sql/: duckhog.test  posthog.test
test/sql/connection/: attach.test  auth.test  control_plane.test
test/sql/errors/: connection_errors.test
test/sql/integration/: alter_column_remote.test_slow  arrow_types.test_slow  basic_select.test_slow  create_view_remote.test_slow  ctas_remote.test_slow  ddl_tables_schemas.test_slow  delete_remote.test_slow  filter_pushdown_remote.test_slow  identifier_edge_cases_remote.test_slow  insert_constraint_error_remote.test_slow  insert_default_values_remote.test_slow  insert_defaults_returning_remote.test_slow  insert_on_conflict_remote.test_slow  insert_remote.test_slow  insert_returning_explicit_columns_remote.test_slow  insert_returning_remote.test_slow  join_cross_catalog_remote.test_slow  list_types_remote.test_slow  map_types_remote.test_slow  merge_remote.test_slow  multi_catalog_schemas.test_slow  partition_insert_remote.test_slow  projection.test_slow  rename_table_remote.test_slow  returning_types_remote.test_slow  select_remote.test_slow  select_types_remote.test_slow  session_token_continuity.test_slow  struct_types_remote.test_slow  table_functions_remote.test_slow  tables.test_slow  time_travel_remote.test_slow  transaction_multi_op_remote.test_slow  truncate_remote.test_slow  unsupported_operations_remote.test_slow  update_remote.test_slow  update_remote_errors.test_slow  update_returning_remote.test_slow
test/sql/queries/: alter_column_remote.test_slow  arrow_types.test_slow  basic_select.test_slow  control_plane.test_slow  create_view_remote.test_slow  ctas_remote.test_slow  ddl_tables_schemas.test_slow  delete_remote.test_slow  identifier_edge_cases_remote.test_slow  insert_constraint_error_remote.test_slow  tables.test_slow  (+22 more)
(+36 files in other folders)
